1. cetus_clmm to testnet-v1.35.1 2. stable-farming rename to stable_farming 3. stable_farming to testnet-v1.35.1

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-sui/clmmpool/build
-sui/clmmpool/.idea/
+sui/cetus_clmm/build
+sui/cetus_clmm/.idea/
 sui/lp_burn/build
-sui/stable-farming/build
+sui/stable_farming/build
+sui/.idea/
