--- a/sui/limit-order/Move.toml
+++ b/sui/limit-order/Move.toml
@@ -4,7 +4,7 @@ version = "0.1.1"
 
 [dependencies]
 MoveSTL = { git = "https://github.com/CetusProtocol/move-stl.git", subdir = "sui", rev = "mainnet-v1.48.2", override = true }
-IntegerMate = { git = "https://github.com/CetusProtocol/integer-mate.git", subdir = "sui", rev = "mainnet-v1.48.2", override = true }
+IntegerMate = { git = "https://github.com/CetusProtocol/integer-mate.git", subdir = "sui", rev = "sui-v1.1.2", override = true }
 
 
 [addresses]
